@@ -1,3 +1,6 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 AUX sparse-0.4.3-gentoo.patch 1446 SHA256 e353bee56776054bbd7c60b4b41424eb2eba565bf303b2eaf382c129880c27aa SHA512 a270266af0ce1728b114092271e627f63f8e55339b06c67634825a7c89a7cf7e1af17cdd47b5dab7475ef7eca39b95026264c870dee2c3a228c63af0bbdec461 WHIRLPOOL b14145d483d29151060b153c52f24d5dd218a49be6f2bd8691d61ae6f861cfa994c2f86e11f30114aedf9fdf304ade78b590e865dd99181c33b491e50841c061
 DIST sparse-0.4.2.tar.bz2 164542 SHA256 eb1d1494e6a7d76ae4eb71918011caad1e5f2672761c90e6de54231f2e98ae5e SHA512 611220865434c5799c682bf0402d5cdfc76a7582e88c98f3083a19aa3bf10c520ef7e10d0d4df9afbd64bfe2d581ab0315a93eab0f9ea39c83ec7c7eb4e1cd2b WHIRLPOOL 860245bc5f16d869997f4a0403a654e47d4f35f30abcd19e2d07c9dd70c8d7801d200c239daffeda6fc64dd104e252a4a7b8ae04d622c790d5fcfe6eb620121a
 DIST sparse-0.4.3.tar.bz2 172431 SHA256 9059bc649ca8c9309e542d0015091ccf72ac9e3300db0adb4eba838cdcc82f9c SHA512 ff3dbd3e28b1a95dc9d6abf9a4ffdfaa0f470047b8232bd50930839432ae66a2249adb861c880e8eef1a906b007fd7d1c1ef8683c48c763eb523aedc9e1df631 WHIRLPOOL d2fad751e0d9594b467a457843a8beb153d9744683cfe9112ae38484f25eb2bb1784fa58d8ec1c6c5341450e966478e42c16027de271452804e5607c0c393354
@@ -6,7 +9,24 @@ DIST sparse-0.5.0.tar.xz 187576 SHA256 921fcf918c6778d1359f3886ac8cb4cf632faa624
 EBUILD sparse-0.4.2.ebuild 995 SHA256 b7764eeec7486f22fdbff8c59462d22ea8d4da6c27d2dad3a6bc704fbb12a90d SHA512 efd8f0ed87154b658311edd7f7ee0f175590b5d2c75dd39ce6b6279dc86af378350eb2d5dd7186cc554d8cc18f5ad1b746dea4872896df42f76f360f098b8517 WHIRLPOOL f5f71fdb754bf6d01d65287ba875dd8f562c3927985a89ee22200da13dddfd146f70c0649200bdefead0247c61e59cfa273c9553215f2daa131ee05b1271b94c
 EBUILD sparse-0.4.3.ebuild 1461 SHA256 fe158280b78cd621e49452ece3c5613db956d6a4213eaf816a453f79667a98a9 SHA512 3ac32b6f73122fc47ae0a72efa144042843c9b69c308523756ec41de6ec040e151766a82e47ffb99981a84c830f5a24d130cb35882f87163b18e22e7d11b3620 WHIRLPOOL 97a7566adbb3790e286ed62c104228dd507f89023f35ccabe09dc95350988efe10c0543982983db77ea46590bd86b1b8d08831cfed548102d582363e0f387eff
 EBUILD sparse-0.4.4.ebuild 1277 SHA256 1a4e7274f9e9783d945dc9d5369ae65051f812278ec1d62835a2c5c22e6688e9 SHA512 2869cd1c2aa4f6770ea61ffe7bdd043b5a6e62319e901d979c35835a3937b35c0a94cc91ba5505fdca9de8d6971d544469242f89b4aa8e716e82bcc4b85ab4be WHIRLPOOL c56de9e785990d87fcec5c4bae4f5465347726e43feaa1c779e3ab4ae7cc5f3e0c307aa314b2dc83165732d81fcef557b3bd8dccab8653699e12147238fc7984
-EBUILD sparse-0.5.0.ebuild 1276 SHA256 10cd50ae741501d29f514a4317dccd5520e8b95c4b8c3401e20b5550c3a1885c SHA512 f37a4a1f27b598e12d5d046aa96dd3af4f0e875bd9428a25a65d1b963042150fcbb4d1256264ffd62a9207e3711669afa6cdb43155571cc036850dcb96c8476f WHIRLPOOL 5f17a375d2a52b8b3e1bfb94dbc2a4ce5b97a64abecf6313a9485d5e52a6f8ef70ead9554882fd42930f79e5bf03d91387ff563c89f9e814f6e17793afbb8d3f
-EBUILD sparse-9999.ebuild 1337 SHA256 41d12ae665ea6178893e2ecda3392ef7b87dc79b132da7dd77db17544b56178a SHA512 d1de55003c12425b61cae618d31fbcbb8f4f61fd0f750d28fc465bf268c3fa4570c25495af67857edcbc1490acf8f2d6d7b6e9034b6d1a01b53272cb34b7bb03 WHIRLPOOL 0db7c5ecb2def387e2a3c3b1e4b294ad0ce340da9d03a0851cac4fd1c5004ffb83e878ada1dc5acabfd2226904ed2d9036bc4376e7c58a10c4a336520b8fb7ef
-MISC ChangeLog 7156 SHA256 9ee10eea2cf16ef93f2667cb95485f2682b14841c8eaa14eb4f8e258ae4edb28 SHA512 d06306cdc8d83c11a1b80731b2ae0533defdd92ca7e01d1835d058b2d6b884094d3307b311126b3cb044e75519093f29bd3492487602b723fbc6f291863ea511 WHIRLPOOL c5749fd14fbb8e5dce499ce582ad14e75011c196a723cbeeed273c5c9e5c011f5553895090a4252fcaaea66e89046518454a0b4a225d903831542af224f04ad9
-MISC metadata.xml 474 SHA256 e8ee12369b20dcf8e7a00de72e44daa2481f72eeff8f87d01faf6b6b01826fba SHA512 4b51445d7449e5adc7ab278e23fd11a22799f63ccf367eba4ccb63e549eddeacb0c8e72f8843f98a497e94ec3c67b111cde031727a94d298c2fb1a3589f016f2 WHIRLPOOL 64f8598ae3ad6f9fdd4173f8c05dcc37bdeba8f9fd3128f3db641ee59cb71c7d5bdf8453ec1a35c08998c218170bb7ac16d7c8b485773d9b1dfc9eb1a1bce1bb
+EBUILD sparse-0.5.0.ebuild 1336 SHA256 65df9165f18b096e1ea9703d7d6552da8b57b649ac19d8f07aff5e1c046e3f00 SHA512 06e3e31b8c0a05717fa7cadffbbfa22a151218ff5533a0351f6cfcf101b7850947dd49cc0f1d56a2d1c0960fea9fe7977541763aeffd756fae4134d61dae8fcb WHIRLPOOL b6bc39ca003aa490720f85db5c1f98b75d2da0b4ebf5a01b6570e5b25eb5b9007c4727a6409a2b171482805b5298a31accce07c418c0fa6c9304499d483a1667
+EBUILD sparse-9999.ebuild 1336 SHA256 37044c57a6b4adcea23a877f58c3815259a74448670387970ec51b0762ff9cce SHA512 885b47936af78fa3e7b914938cfb8f9d7dec1ea97d5161bd29d3cbc25abcd75b749c28a7c5c4db658c11f7d935f7268ef32c7450432867da006bab752f54e9d4 WHIRLPOOL c32bc6582c44423de0de3f70307e7332d3469d49994e903bd1fbfd3d1ecbca4a4c421b5e7ff5e1a9c17a61a248a42b4d820881ede86ffff339f118ce4641813a
+MISC ChangeLog 7339 SHA256 589ff29427d8f433872c1fd68de20e72796c23600b5ef82558bd704603263242 SHA512 21b50511c2426e1dbf8bd1d6fbf1916e7bbfa67cc56d0e6d8a038a7a9eabc530ae635a5955c5cee94f6b430d04dfd31624a88b4ddc21db800782c831a5586fbc WHIRLPOOL 8aef88c358916523f0acdeb5ec6e340c314758a496aceeb3d520da4da588a35bb6d8fed685e902bbbc67b708fea9b69753a9d11c3ab93c2cc803bf9d7cb5d058
+MISC metadata.xml 491 SHA256 7bc64dde6b7c2df6acda0a16093316fb1a97d2df580ff404852672bcb691aa5e SHA512 68e2336467b35df91d839676feffeac3f542ae6c937dcc4227f9da5a6aef506a65485edff6ad2c50792245abe78bb768f847281d71c37b923269c48e96415b16 WHIRLPOOL dbc1e6471867a84ef5b6f1fb1454625d54bc51f6a210f1354ed2bb0000db6fe3eecc5035d0362173c259ecb85cbabd66b193fbd5260df142ba81b877858e9092
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2
+
+iQIcBAEBCAAGBQJUQBurAAoJEPGu1DbS6WIANzAP+gJpYmvftnIpE+KO3LuDAgtK
+Lyc0O6Oxn8JOq6VnsrbYaj/C1H+USvzTsqG/yKKoDndhklAfTC5/0Cok2M3PuMs1
+eHISx27BBObfelPVfFOP+ht0/OjEprsoUYdGwIPYLXK4OXAniEZIpbEO1f9XzSPE
+haR6BDgadWFvlJPLOhlzou8I3cvk3KK3UYpZPGK37eNyJ6S3IyEH8jSFE6Z766R1
+V+lhE24F6NCML7+djdVbwykCS93ddHQwoH8uXpXv5R9Ir6dPyO+7r/AoLZiIGLg5
+Ma8B5a7ATRqgWcJNfyao+t1RjK9MmOF8TF0N+jIQLYNIKUvRP4DN3RMFu5EBEFGk
+tPoRE45SI7jutOIVFWzqPDWpqOCSoNcBgYr+OHcctByy59bm20X0y6r6AWHrsAb+
+1mJExtATnngPjjxqj59J9I6CxFkMOQ9BhLj7fZzE3aPt5p60OwG50Wujqz6yMumL
+FaNI874HNEkQFZ59BsnmCY147W3h5u5aIcnZgcAAhiFCOdl5+EAGjoFXoZG05r4H
+RDTmNjIq8nGst78Axs6WHZd2yd4fIEBiJnKeTyREM4oQoDu6Wt/25cB4ZLQWNzkv
+n3GskEtbRG+ipXheuDkBCREtOeqHbv6YArhU8TRuniQH9q13a7Ou9qzG2u//YGJ3
+PQ0xhaIaC433mcr9h5CA
+=YWsu
+-----END PGP SIGNATURE-----
