@@ -8,7 +8,7 @@
       Build the test-inspect utility (requires
       <pkg>x11-libs/gtk+</pkg> version 2)
     </flag>
-	<flag name='llvm'>support llvm</flag>
+	<flag name='llvm'>Build the sparse-llvm utility</flag>
     <flag name='xml'>
       Build the c2xml utility (requires <pkg>dev-libs/libxml2</pkg>).
     </flag>
