@@ -1,6 +1,6 @@
 # Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sys-devel/sparse/sparse-0.5.0.ebuild,v 1.1 2014/02/27 20:31:26 gregkh Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-devel/sparse/sparse-0.5.0.ebuild,v 1.2 2014/10/16 19:25:30 vapier Exp $
 
 EAPI="4"
 
@@ -23,9 +23,10 @@ fi
 
 LICENSE="OSL-1.1"
 SLOT="0"
-IUSE="gtk test xml"
+IUSE="gtk llvm test xml"
 
 RDEPEND="gtk? ( x11-libs/gtk+:2 )
+	llvm? ( >=sys-devel/llvm-3.0 )
 	xml? ( dev-libs/libxml2 )"
 DEPEND="${RDEPEND}
 	gtk? ( virtual/pkgconfig )
@@ -39,7 +40,7 @@ src_prepare() {
 		-e '/^CFLAGS =/{s:=:+= $(CPPFLAGS):;s:-O2 -finline-functions::}' \
 		-e "s:pkg-config:${PKG_CONFIG}:" \
 		Makefile || die
-	export MAKEOPTS+=" V=1 AR=${AR} CC=${CC} HAVE_GTK2=$(usex gtk) HAVE_LIBXML=$(usex xml)"
+	export MAKEOPTS+=" V=1 AR=${AR} CC=${CC} HAVE_GTK2=$(usex gtk) HAVE_LLVM=$(usex llvm) HAVE_LIBXML=$(usex xml)"
 }
 
 src_compile() {
