@@ -1,6 +1,10 @@
 # ChangeLog for sys-devel/sparse
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-devel/sparse/ChangeLog,v 1.56 2014/02/27 20:31:26 gregkh Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-devel/sparse/ChangeLog,v 1.57 2014/10/16 19:25:30 vapier Exp $
+
+  16 Oct 2014; Mike Frysinger <vapier@gentoo.org> metadata.xml,
+  sparse-0.5.0.ebuild, sparse-9999.ebuild:
+  Backport USE=llvm support from live ebuild #524776 by Sebastian Pipping.
 
 *sparse-0.5.0 (27 Feb 2014)
 
